--- a/multi-stage-multi-agent/Jenkinsfile
+++ b/multi-stage-multi-agent/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
       }
       steps {
         sh 'node --version'
-        sh 'node console.log(1+1)'
+        sh 'console.log("Hello World")'
       }
     }
   }
